--- a/www/py-django/Makefile
+++ b/www/py-django/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2009/05/02 16:21:46 reed Exp $
+# $NetBSD: Makefile,v 1.18 2009/07/14 11:17:11 joerg Exp $
 
 DJANGOVERS=	1.0.2
 DISTNAME=	Django-${DJANGOVERS}-final
@@ -18,6 +18,8 @@ PYTHON_VERSIONS_ACCEPTED=	25 24
 PLIST_SUBST+=	PYVERSSUFFIX=${PYVERSSUFFIX:Q}
 
 PKG_DESTDIR_SUPPORT=	user-destdir
+
+USE_LANGUAGES=	# empty
 
 DEPENDS+=	${PYPKGPREFIX}-flup-[0-9]*:../../www/py-flup
 
