--- a/games/pokerth/Makefile
+++ b/games/pokerth/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.1.1.1 2009/01/31 03:04:37 ahoka Exp $
+# $NetBSD: Makefile,v 1.2 2009/07/14 15:53:20 hasso Exp $
 #
 
-DISTNAME=	PokerTH-0.6.3-2-src
-PKGNAME=        pokerth-0.6.3.2
+DISTNAME=	PokerTH-0.7.1-src
+PKGNAME=        pokerth-0.7.1
 CATEGORIES=	games
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=pokerth/}
 EXTRACT_SUFX=	.tar.bz2
