--- a/devel/eet/Makefile
+++ b/devel/eet/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2009/06/10 06:40:11 minskim Exp $
+# $NetBSD: Makefile,v 1.13 2009/07/14 22:04:18 joerg Exp $
 #
 
-DISTNAME=	eet-1.2.0
+DISTNAME=	eet-1.2.1
 CATEGORIES=	devel archivers
 MASTER_SITES=	http://download.enlightenment.org/releases/
 EXTRACT_SUFX=	.tar.bz2
