--- a/lang/embryo/Makefile
+++ b/lang/embryo/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.4 2009/06/07 14:42:54 joerg Exp $
+# $NetBSD: Makefile,v 1.5 2009/07/14 22:05:39 joerg Exp $
 #
 
-DISTNAME=	embryo-0.9.9.060
+DISTNAME=	embryo-0.9.9.061
 CATEGORIES=	lang
-MASTER_SITES=	http://download.enlightenment.org/snapshots/2009-04-22/
+MASTER_SITES=	http://download.enlightenment.org/snapshots/2009-06-14/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	grzela@seculture.com
@@ -14,7 +14,7 @@ PKG_DESTDIR_SUPPORT=	user-destdir
 
 GNU_CONFIGURE=	yes
 USE_LIBTOOL=	yes
-USE_TOOLS+=	gmake pkg-config
+USE_TOOLS+=	pkg-config
 
 PKGCONFIG_OVERRIDE=	embryo.pc.in
 
