--- a/devel/py-ZopeInterface/Makefile
+++ b/devel/py-ZopeInterface/Makefile
@@ -1,23 +1,17 @@
-# $NetBSD: Makefile,v 1.7 2008/06/12 02:14:28 joerg Exp $
+# $NetBSD: Makefile,v 1.8 2009/07/15 06:12:44 ver Exp $
 #
 
-DISTNAME=		ZopeInterface-3.0.1
-PKGNAME=		${PYPKGPREFIX}-ZopeInterface-3.0.1
-PKGREVISION=		1
+DISTNAME=		zope.interface-3.3.0
+PKGNAME=		${PYPKGPREFIX}-ZopeInterface-3.3.0
 CATEGORIES=		devel python
-MASTER_SITES=		http://zope.org/Products/ZopeInterface/3.0.1final/
-EXTRACT_SUFX=		.tgz
+MASTER_SITES=		http://www.zope.org/Products/ZopeInterface/3.3.0/
 
 MAINTAINER=		sifu@0xx0.net
 HOMEPAGE=		http://www.zope.org/
 COMMENT=		The zope.interface package used in Zope 3 and Twisted
+LICENSE=		zpl
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 
-PYDISTUTILSPKG=		yes
-
-pre-build:
-	${RM} ${WRKSRC}/Dependencies/zope.interface-ZopeInterface-3.0.1/zope.interface/*.orig
-
-.include "../../lang/python/extension.mk"
+.include "../../lang/python/egg.mk"
 .include "../../mk/bsd.pkg.mk"
