--- a/archivers/Makefile
+++ b/archivers/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.113 2009/07/13 19:45:24 wiz Exp $
+# $NetBSD: Makefile,v 1.114 2009/07/15 08:37:45 wiz Exp $
 #
 
 COMMENT=	Archivers
@@ -37,6 +37,7 @@ SUBDIR+=	libarchive
 SUBDIR+=	libcomprex
 SUBDIR+=	liblzo
 SUBDIR+=	libzip
+SUBDIR+=	lzip
 SUBDIR+=	lzma
 SUBDIR+=	lzma-utils
 SUBDIR+=	lzmalib
