--- a/wm/dwm/Makefile
+++ b/wm/dwm/Makefile
@@ -1,14 +1,13 @@
-# $NetBSD: Makefile,v 1.7 2009/06/14 22:45:12 ahoka Exp $
+# $NetBSD: Makefile,v 1.8 2009/07/15 20:35:18 tnn Exp $
 #
 
-DISTNAME=	dwm-5.5
+DISTNAME=	dwm-5.6
 CATEGORIES=	wm
 MASTER_SITES=	http://code.suckless.org/dl/dwm/
 
 MAINTAINER=	leot1990@users.sourceforge.net
 HOMEPAGE=	http://dwm.suckless.org/
 COMMENT=	Dynamic window manager
-
 LICENSE=	mit
 
 PKG_DESTDIR_SUPPORT=	user-destdir
@@ -30,5 +29,4 @@ SUBST_SED.makefile+=	-e 's/cc/${CC:Q}/'
 INSTALLATION_DIRS=	bin ${PKGMANDIR}/man1
 
 .include "options.mk"
-
 .include "../../mk/bsd.pkg.mk"
