--- a/wm/ethemes/Makefile
+++ b/wm/ethemes/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2009/07/07 19:46:03 joerg Exp $
+# $NetBSD: Makefile,v 1.19 2009/07/15 20:57:47 joerg Exp $
 
 DISTNAME=	ethemes-0.1
 PKGREVISION=	3
@@ -9,6 +9,8 @@ DISTFILES=	${E_THEMES}
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://e.themes.org/
 COMMENT=	Themes for the window manager Enlightenment
+
+PKG_DESTDIR_SUPPORT=	user-destdir
 
 DEPENDS+=	enlightenment>=0.16.2:../../wm/enlightenment
 
