--- a/devel/py-ZopeInterface/Makefile
+++ b/devel/py-ZopeInterface/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.8 2009/07/15 06:12:44 ver Exp $
+# $NetBSD: Makefile,v 1.9 2009/07/15 21:09:10 joerg Exp $
 #
 
 DISTNAME=		zope.interface-3.3.0
 PKGNAME=		${PYPKGPREFIX}-ZopeInterface-3.3.0
+PKGREVISION=		1
 CATEGORIES=		devel python
 MASTER_SITES=		http://www.zope.org/Products/ZopeInterface/3.3.0/
 
