--- a/fonts/Makefile
+++ b/fonts/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.138 2009/07/15 21:01:35 minskim Exp $
+# $NetBSD: Makefile,v 1.139 2009/07/15 23:55:12 minskim Exp $
 #
 
 COMMENT=	Fonts
@@ -143,6 +143,7 @@ SUBDIR+=	tex-cm
 SUBDIR+=	tex-cm-super
 SUBDIR+=	tex-cm-super-doc
 SUBDIR+=	tex-cmex
+SUBDIR+=	tex-courier
 SUBDIR+=	tex-euenc
 SUBDIR+=	tex-euenc-doc
 SUBDIR+=	tex-glyphlist
