--- a/graphics/p5-GD/Makefile
+++ b/graphics/p5-GD/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.41 2009/07/10 08:36:53 sno Exp $
+# $NetBSD: Makefile,v 1.42 2009/07/16 06:18:43 sno Exp $
 
-DISTNAME=	GD-2.43
+DISTNAME=	GD-2.44
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5bd
 CATEGORIES=	graphics perl5
@@ -9,7 +9,7 @@ MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=GD/}
 MAINTAINER=	damon@brodiefamily.org
 HOMEPAGE=	http://theory.uwinnipeg.ca/CPAN/data/GD/GD.html
 COMMENT=	Perl5 interface to gd graphics library
-LICENSE=	artistic
+LICENSE=	gnu-gpl-v2 OR artistic-2.0
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
