--- a/net/monsoon/Makefile
+++ b/net/monsoon/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.4 2009/06/22 02:02:46 ahoka Exp $
+# $NetBSD: Makefile,v 1.5 2009/07/16 07:55:05 kefren Exp $
 
-DISTNAME=	monsoon-0.15
-PKGREVISION=	2
+DISTNAME=	monsoon-0.20
 CATEGORIES=	net
 MASTER_SITES=	http://www.monsoon-project.org/jaws/data/files/
 
@@ -9,14 +8,15 @@ MAINTAINER=	kefren@NetBSD.org
 HOMEPAGE=	http://www.monsoon-project.org/
 COMMENT=	Open source GTK+ bittorrent client
 
+PKG_DESTDIR_SUPPORT=	user-destdir
+
 GNU_CONFIGURE=	yes
 MAKE_JOBS_SAFE=	no
-USE_TOOLS+=	gmake gtar perl pkg-config msgfmt
+USE_TOOLS+=	gmake gtar intltool perl pkg-config msgfmt
 EXTRACT_USING=	gtar
 
-DEPENDS+=	intltool>0.40.0:../../textproc/intltool
-
 .include "../../lang/mono/buildlink3.mk"
+.include "../../net/mono-nat/buildlink3.mk"
 .include "../../net/monotorrent/buildlink3.mk"
 .include "../../sysutils/ndesk-dbus/buildlink3.mk"
 .include "../../sysutils/ndesk-dbus-glib/buildlink3.mk"
