--- a/www/swill/Makefile
+++ b/www/swill/Makefile
@@ -1,20 +1,19 @@
-# $NetBSD: Makefile,v 1.7 2009/07/07 18:55:03 joerg Exp $
+# $NetBSD: Makefile,v 1.8 2009/07/16 13:17:45 zafer Exp $
 
-DISTNAME=		swill-0.1
+DISTNAME=		swill-0.3
 CATEGORIES=		www devel
-MASTER_SITES=		http://systems.cs.uchicago.edu/swill/
+MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=swill/}
+EXTRACT_SUFX=	.tgz
 
 MAINTAINER=		thorpej@NetBSD.org
-HOMEPAGE=		http://systems.cs.uchicago.edu/swill/
+HOMEPAGE=		http://swill.sourceforge.net/
 COMMENT=		The Simple Web Interface Link Library
+LICENSE=	gnu-lgpl-v2.1
 
-PKG_DESTDIR_SUPPORT=	user-destdir
-
-WRKSRC=			${WRKDIR}/SWILL-0.1
+WRKSRC=			${WRKDIR}/SWILL-0.3
 GNU_CONFIGURE=		yes
-INSTALLATION_DIRS=	include lib
-
 INSTALL_MAKE_FLAGS+=	prefix=${DESTDIR}${PREFIX}
+INSTALLATION_DIRS=	include lib
 
 MAKE_JOBS_SAFE=		no
 
