--- a/x11/matchbox-themes-extra/Makefile
+++ b/x11/matchbox-themes-extra/Makefile
@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.5 2008/07/14 12:56:19 joerg Exp $
+# $NetBSD: Makefile,v 1.6 2009/07/16 21:48:49 zafer Exp $
 #
 
 DISTNAME=	matchbox-themes-extra-0.3
 PKGREVISION=	1
 CATEGORIES=	x11
-MASTER_SITES=	http://projects.o-hand.com/matchbox/sources/matchbox-themes-extra/0.3/
+MASTER_SITES=	http://matchbox-project.org/sources/matchbox-themes-extra/0.3/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://projects.o-hand.com/matchbox/
+HOMEPAGE=	http://matchbox-project.org/
 COMMENT=	Collection of themes for Matchbox
 
 PKG_DESTDIR_SUPPORT=	user-destdir
