--- a/security/pgp5/Makefile
+++ b/security/pgp5/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.35 2009/06/30 00:07:22 joerg Exp $
+# $NetBSD: Makefile,v 1.36 2009/07/16 23:07:31 zafer Exp $
 #
 
 DISTNAME=	pgp50i-unix-src
@@ -6,9 +6,7 @@ PKGNAME=	pgp5-5.0i
 CATEGORIES=	security
 MASTER_SITES=	ftp://ftp.pgpi.com/pub/pgp/5.0/unix/ \
 		ftp://ftp.au.pgpi.com/pub/pgp/5.0/unix/ \
-		ftp://ftp.ifi.uio.no/pub/pgp/5.0/unix/ \
-		ftp://ftp.tuwien.ac.at/privacy/pgp/5.0/unix/ \
-		http://ftp.tuwien.ac.at/privacy/pgp/5.0/unix/
+		ftp://ftp.ifi.uio.no/pub/pgp/5.0/unix/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.pgpi.org/
