--- a/print/Makefile
+++ b/print/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.289 2009/07/16 23:29:51 minskim Exp $
+# $NetBSD: Makefile,v 1.290 2009/07/16 23:32:13 minskim Exp $
 #
 
 COMMENT=	Desktop publishing
@@ -299,6 +299,8 @@ SUBDIR+=	tex-sttools
 SUBDIR+=	tex-sttools-doc
 SUBDIR+=	tex-subfig
 SUBDIR+=	tex-subfig-doc
+SUBDIR+=	tex-subfigure
+SUBDIR+=	tex-subfigure-doc
 SUBDIR+=	tex-titlesec
 SUBDIR+=	tex-titlesec-doc
 SUBDIR+=	tex-tools
