--- a/multimedia/libogg/Makefile
+++ b/multimedia/libogg/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.11 2006/11/03 06:55:40 joerg Exp $
+# $NetBSD: Makefile,v 1.12 2009/07/17 20:22:50 wiz Exp $
 #
 
-DISTNAME=	libogg-1.1.3
+DISTNAME=	libogg-1.1.4
 CATEGORIES=	multimedia devel
 MASTER_SITES=	http://downloads.xiph.org/releases/ogg/
 
