--- a/multimedia/libogg/Makefile
+++ b/multimedia/libogg/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2009/07/17 20:22:50 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2009/07/17 20:31:12 wiz Exp $
 #
 
 DISTNAME=	libogg-1.1.4
@@ -8,6 +8,7 @@ MASTER_SITES=	http://downloads.xiph.org/releases/ogg/
 MAINTAINER=	wiz@NetBSD.org
 HOMEPAGE=	http://www.xiph.org/ogg/
 COMMENT=	Ogg project codecs library
+LICENSE=	modified-bsd
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 PKG_DESTDIR_SUPPORT=	user-destdir
