--- a/x11/pixman/Makefile
+++ b/x11/pixman/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.27 2009/07/09 17:24:07 drochner Exp $
+# $NetBSD: Makefile,v 1.28 2009/07/18 06:33:58 wiz Exp $
 #
 
-DISTNAME=	pixman-0.15.14
+DISTNAME=	pixman-0.15.16
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_XORG:=lib/}
 EXTRACT_SUFX=	.tar.bz2
